# TiShift

./: .gitignore  README.md
aurora-to-tidb/: SKILL.md  pyproject.toml  tishift.example.yaml
aurora-to-tidb/tishift/: config.py  models.py
firestore-to-tidb/: README.md  SKILL.md  pyproject.toml
firestore-to-tidb/config/: tishift-firestore.example.yaml
firestore-to-tidb/docs/: byoc-deployment.md  check-guide.md  convert-guide.md  getting-started.md  load-guide.md  scan-guide.md  sync-guide.md
firestore-to-tidb/references/: byoc-runbook.md  compatibility-rules.md  schema-policy.md  scoring.md  type-mapping.md
firestore-to-tidb/sql/: sample-schema.json
firestore-to-tidb/tests/: conftest.py  test_canonicalize.py  test_compatibility.py  test_config.py  test_connection.py  test_cutover.py  test_ddl_emitter.py  test_identifiers.py  test_lightning.py  test_policy.py  test_sampler.py  test_scoring.py  test_type_inferrer.py  test_type_map.py
firestore-to-tidb/tishift_firestore/: __init__.py  config.py  connection.py
firestore-to-tidb/tishift_firestore/cli/: __init__.py  check_cmd.py  convert_cmd.py  load_cmd.py  main.py  preflight_cmd.py  scan_cmd.py  score_cmd.py  sync_cmd.py
firestore-to-tidb/tishift_firestore/core/: __init__.py
firestore-to-tidb/tishift_firestore/mcp/: __init__.py  server.py
firestore-to-tidb/tishift_firestore/rules/: __init__.py  compatibility.py  identifiers.py  scoring.py  type_map.py
heatwave-to-tidb/: README.md  SKILL.md  pyproject.toml
heatwave-to-tidb/config/: tishift-heatwave.example.yaml
heatwave-to-tidb/docs/: check-guide.md  checklist.md  convert-guide.md  getting-started.md  load-guide.md  scan-guide.md  sync-guide.md
heatwave-to-tidb/references/: compatibility-rules.md  load-strategies.md  scoring.md  type-mapping.md
heatwave-to-tidb/sql/: sample-schema.sql
heatwave-to-tidb/tests/: conftest.py  test_cli_stubs.py  test_config.py
heatwave-to-tidb/tests/test_convert/: test_convert_cmd.py  test_ddl_cleaner.py  test_schema_transformer.py
heatwave-to-tidb/tests/test_scan/: fake_connection.py  test_binlog_check.py  test_binlog_collector.py  test_compatibility_analyzer.py  test_metadata_collector.py  test_orchestrator.py  test_report.py  test_scan_cmd.py  test_schema_collector.py  test_scoring_engine.py  test_valid_indexes_collector.py
heatwave-to-tidb/tishift_heatwave/: __init__.py  cli.py  config.py  connection.py  models.py
heatwave-to-tidb/tishift_heatwave/core/: __init__.py
heatwave-to-tidb/tishift_heatwave/rules/: __init__.py  binlog_check.py  compatibility.py  ddl_cleanup.py  scoring.py  valid_indexes.py
mongodb-to-tidb/: README.md  SKILL.md  pyproject.toml
mongodb-to-tidb/config/: tishift-mongodb.example.yaml
mongodb-to-tidb/docs/: check-guide.md  convert-guide.md  deployment-topologies.md  getting-started.md  load-guide.md  scan-guide.md  sync-guide.md
mongodb-to-tidb/references/: aggregation-rewrite.md  cdc-providers.md  compatibility-rules.md  load-strategies.md  schema-policy.md  scoring.md  type-mapping.md
mongodb-to-tidb/sql/: sample-schema.json
mongodb-to-tidb/tests/: conftest.py  test_aggregation_inventory.py  test_canonicalize.py  test_compatibility.py  test_config.py  test_cutover.py  test_ddl_emitter.py  test_dms_emitter.py  test_identifiers.py  test_indexes.py  test_mongodump_loader.py  test_policy.py  test_sampler.py  test_scoring.py  test_storage.py  test_ticloud_import.py  test_topology_detect.py  test_type_inferrer.py  test_type_map.py
mongodb-to-tidb/tishift_mongodb/: __init__.py  config.py  connection.py  storage.py
mongodb-to-tidb/tishift_mongodb/cli/: __init__.py  check_cmd.py  convert_cmd.py  load_cmd.py  main.py  preflight_cmd.py  scan_cmd.py  score_cmd.py  sync_cmd.py
mongodb-to-tidb/tishift_mongodb/core/: __init__.py
mongodb-to-tidb/tishift_mongodb/mcp/: __init__.py  server.py
mongodb-to-tidb/tishift_mongodb/rules/: __init__.py  compatibility.py  identifiers.py  scoring.py  type_map.py
neon-to-tidb/: README.md  SKILL.md  pyproject.toml
neon-to-tidb/config/: tishift-neon.example.yaml
neon-to-tidb/docs/: check-guide.md  convert-guide.md  getting-started.md  load-guide.md  scan-guide.md  sync-guide.md
neon-to-tidb/references/: compatibility-rules.md  function-mapping.md  scoring.md  type-mapping.md
neon-to-tidb/sql/: sample-schema.sql
neon-to-tidb/tests/: conftest.py
neon-to-tidb/tishift_neon/: __init__.py  cli.py  config.py  connection.py  models.py
oceanbase-to-tidb/: README.md  SKILL.md  pyproject.toml
oceanbase-to-tidb/config/: tishift-ob.example.yaml
oceanbase-to-tidb/docs/: check-guide.md  convert-guide.md  getting-started.md  load-guide.md  scan-guide.md  sync-guide.md
oceanbase-to-tidb/references/: compatibility-rules.md  function-mapping.md  scoring.md  type-mapping-oracle.md  type-mapping.md
oceanbase-to-tidb/sql/: sample-schema-mysql.sql  sample-schema-oracle.sql
oceanbase-to-tidb/tests/: conftest.py
oceanbase-to-tidb/tests/test_core/: test_config.py  test_scoring.py  (+1 more)
oceanbase-to-tidb/tishift_ob/: __init__.py  config.py  connection.py  mode.py
oracle-to-tidb/: README.md  SKILL.md  pyproject.toml
oracle-to-tidb/config/: tishift-oracle.example.yaml
oracle-to-tidb/docs/: check-guide.md  convert-guide.md  getting-started.md  load-guide.md  scan-guide.md  sync-guide.md
oracle-to-tidb/references/: compatibility-rules.md  function-mapping.md  scoring.md  type-mapping.md
oracle-to-tidb/sql/: sample-schema.sql
oracle-to-tidb/tests/: conftest.py
oracle-to-tidb/tishift_oracle/: __init__.py  config.py  connection.py
supabase-to-tidb/: .gitignore  README.md  SKILL.md  pyproject.toml
supabase-to-tidb/config/: tishift-supabase.example.yaml
supabase-to-tidb/docs/: check-guide.md  convert-guide.md  getting-started.md  load-guide.md  scan-guide.md  sync-guide.md
supabase-to-tidb/references/: compatibility-rules.md  function-mapping.md  scoring.md  type-mapping.md
supabase-to-tidb/sql/: sample-schema.sql
supabase-to-tidb/tests/: conftest.py
supabase-to-tidb/tishift_supabase/: __init__.py  config.py  connection.py
(+153 files in other folders)
