[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tishift"
version = "0.1.0"
description = "Aurora MySQL to TiDB migration toolkit"
readme = {text = "Aurora MySQL to TiDB migration toolkit", content-type = "text/plain"}
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pymysql>=1.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "sqlglot>=20.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ai = [
    "openai>=1.0",
]
aws = [
    "boto3>=1.28",
]
pdf = [
    "weasyprint>=61.0",
]
[project.scripts]
tishift = "tishift.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tishift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
