[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tishift-firestore"
version = "0.1.0"
description = "Cloud Firestore → TiDB migration toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "PingCAP Partner Solutions Architecture" },
]
keywords = ["firestore", "tidb", "migration", "nosql", "document-database", "gcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

dependencies = [
    "click>=8.1",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "Rich>=13.0",
    "Jinja2>=3.1",
    "PyMySQL>=1.1",
    "prometheus-client>=0.20",
    "google-cloud-firestore>=2.15",
    "google-cloud-storage>=2.14",
    "google-cloud-bigquery>=3.20",
    "google-cloud-monitoring>=2.19",
    "apache-beam[gcp]>=2.55",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]
report = [
    "WeasyPrint>=62",
]

[project.scripts]
tishift-firestore = "tishift_firestore.cli.main:cli"
tishift-firestore-mcp = "tishift_firestore.mcp.server:main"

[project.urls]
Homepage = "https://github.com/pingcap-inc/TiShift"
Documentation = "https://github.com/pingcap-inc/TiShift/tree/main/firestore-to-tidb/docs"
Repository = "https://github.com/pingcap-inc/TiShift"

[tool.setuptools.packages.find]
include = ["tishift_firestore*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "emulator: requires the Firestore Emulator running",
    "live_gcp: requires live GCP credentials and resources",
    "live_tidb: requires a reachable TiDB cluster",
]
