[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tishift-heatwave"
version = "0.2.0"
description = "MySQL HeatWave to TiDB migration toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "PingCAP" }]
dependencies = [
  "pymysql>=1.1.0",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "click>=8.1",
  "rich>=13.0",
  "sqlglot>=20.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
oci = ["oci>=2.100"]
pdf = ["weasyprint>=62.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
tishift-heatwave = "tishift_heatwave.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["tishift_heatwave"]

[tool.hatch.build.targets.wheel]
packages = ["tishift_heatwave"]
