[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tishift-oracle"
version = "0.1.0"
description = "Oracle to TiDB migration toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "PingCAP" }]
dependencies = [
  "oracledb>=2.0",
  "pymysql>=1.1.0",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "click>=8.1",
  "rich>=13.0",
  "sqlglot>=20.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
pdf = ["weasyprint>=62.0"]
aws = ["boto3>=1.28"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
tishift-oracle = "tishift_oracle.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:Field name \"schema\" in \"SourceConfig\" shadows an attribute:UserWarning",
]

[tool.coverage.run]
source = ["tishift_oracle"]
