[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tishift-supabase"
version = "0.1.0"
description = "Supabase to TiDB migration toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "PingCAP" }]
dependencies = [
  "psycopg[binary]>=3.1",
  "pymysql>=1.1.0",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "click>=8.1",
  "rich>=13.0",
  "sqlglot>=20.0",
  "jinja2>=3.1",
  "prometheus-client>=0.19",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
mcp = ["mcp[cli]>=1.0"]
pdf = ["weasyprint>=62.0"]
aws = ["boto3>=1.34"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
tishift-supabase = "tishift_supabase.cli:main"
tishift-supabase-mcp = "tishift_supabase.mcp:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["tishift_supabase"]
